# gpt-training-rocm-rx9700

./: .gitignore  BF16_vs_FP16.md  CHINESE_DATASETS.md  CHINESE_TRAINING_GUIDE.md  CUSTOM_DOCKER_IMAGE_GUIDE.md  DOCKER_DDP_GUIDE.md  DOCKER_SETUP.md  DOCKER_WANDB_SETUP.md  Dockerfile  GPU_TRAINING_OPTIMIZATION.md  NETWORK_BANDWIDTH_ANALYSIS.md  README.md  ROCM_71_GFX1201_SUPPORT.md  ROCM_VERIFY.md  SETUP_GUIDE.md  TRAINING_PLAN.md  TRAINING_PROCESS_EXPLAINED.md  TWO_NODES_TRAINING.md  WANDB_INTEGRATION_GUIDE.md  build_docker_image.sh  check_rocm_gpu_support.sh  diagnose_rocm.sh  docker-compose.yml  docker_run.sh  docker_run_ddp.sh  docker_run_ddp_custom.sh  fix_hip_env.sh  install_docker.sh  install_pytorch_rocm.sh  monitor_gpu.sh  pyproject.toml  run_2nodes.sh  run_multi_gpu.sh  run_single_gpu.sh  run_single_gpu_optimized.sh  setup_env.sh  setup_rocm_env.sh  test_docker_ddp_network.sh  test_generation.py  test_rocm_pytorch.py  (+4 more)
